--- a/readme/README.md.tmpl
+++ b/readme/README.md.tmpl
@@ -1,7 +1,7 @@
 
 # CCH #
 
-CCH is a C++ preprocessor that removes the need to separate class definitions and implementation.  C++ code can be written in a single .cch file and CCH will automatically split it into corresponding .cc and .h files.  Keep build times, header size, and editor window switches to a minimum.
+CCH is a C++ preprocessor that removes the need to manually separate function declarations and implementation.  C++ code can be written in a single .cch file and CCH will automatically split it into corresponding .cc and .h files.  Keep build times, header size, and editor window switches to a minimum.
 
 CCH is designed to be hooked into your build system as a step prior to compilation and offers numerous usages to fit any build system.
 
