Added ctags info to README.md

--- a/readme/README.md.tmpl
+++ b/readme/README.md.tmpl
@@ -55,3 +55,8 @@ The following are handy shortcuts to have .cch files handled as C++ code in your
 ```
 au BufEnter *.cch setf cpp
 ```
+
+<b>ctags</b> - add .cch to the extension->language mapping when invoking ctags:
+```
+$ ctags ... --langmap="c++:+.cch" ...
+```
