--- a/readme/README.md.tmpl
+++ b/readme/README.md.tmpl
@@ -15,11 +15,11 @@ Try CCH and see what it can do for your C++ codebase today!
 
 For both Linux and OS X:
 
-    make && make test && sudo make install
+    make && make runtests && sudo make install
 
 For Windows compilation under Cygwin:
 
-    make && make test
+    make && make runtests
 
 then copy the binary to some directory in PATH.
 
